# shotgen

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: cmp_stacking.py  generate_record.py  kirchhoff_migration.py  reverse_time_migration.py  rtm_from_data.py  test_plot_shotrecord.py  test_save_load.py  test_segy_io.py
shotgen/: __init__.py  io.py  migration.py  migration3.py  models.py  sampleshot.py
src/shotgen/: migration.py  sampleshot.py
src/shotgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_migration_segy.py
walkthrough/: migration_to_segy.md
